<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/actions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragment_wrapper"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:background="@drawable/fragment_border"
            android:padding="16dp" />

        <TextView
            android:id="@+id/fragments_lifecycle_info"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:layout_weight="2"
            android:scrollbars="vertical" />
    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/actions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <CheckBox
            android:id="@+id/back_stack_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_back_stack"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioGroup
            android:id="@+id/actions_group"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="@id/back_stack_box"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/fragments_group"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/action_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/action_add" />

            <RadioButton
                android:id="@+id/action_replace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_replace" />

            <RadioButton
                android:id="@+id/action_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_show" />

            <RadioButton
                android:id="@+id/action_hide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_hide" />

            <RadioButton
                android:id="@+id/action_remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_remove" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/fragments_group"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="@id/back_stack_box"
            app:layout_constraintEnd_toStartOf="@id/actions_group"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/fragment_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/first_fragment_name" />

            <RadioButton
                android:id="@+id/fragment_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_fragment_name" />

            <RadioButton
                android:id="@+id/fragment_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/third_fragment_name" />

            <RadioButton
                android:id="@+id/fragment_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fourth_fragment_name" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/start_command"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/command_start_name" />

        <Button
            android:id="@+id/back_stack_command"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/command_remove_name" />

        <Button
            android:id="@+id/clear_command"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/command_clear_name" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>